--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -156,6 +155,7 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -173,6 +173,7 @@ allow 162.247.74.7;
 allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
+allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
@@ -628,9 +629,11 @@ allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.133;
+allow 193.218.118.161;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
+allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.233.133.42;
@@ -689,6 +692,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -981,7 +985,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -1002,7 +1005,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1554,6 +1556,7 @@ allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3e3:519::1;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:470::30;
+allow 2a0e:b107:12d:abcd:f8fe:d2ff:feb0:6d14;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
@@ -1576,6 +1579,8 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
+allow 2a0f:e586:f:f:8398:111f:f05a:ac07;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1614,7 +1619,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
 allow 41.216.183.87;
-allow 44.194.47.213;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1731,6 +1735,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.211.39.35;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1887,11 +1892,6 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
-allow 94.177.106.37;
-allow 94.177.106.46;
-allow 94.177.106.54;
-allow 94.177.106.55;
-allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
