--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -6,7 +6,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -156,6 +155,7 @@ deny 149.56.44.47;
 deny 151.80.148.159;
 deny 152.89.233.169;
 deny 154.16.116.61;
+deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.247.72.192;
@@ -173,6 +173,7 @@ deny 162.247.74.7;
 deny 162.247.74.74;
 deny 162.251.5.152;
 deny 163.172.45.102;
+deny 163.5.143.76;
 deny 164.132.172.209;
 deny 165.73.242.163;
 deny 166.70.207.2;
@@ -628,9 +629,11 @@ deny 193.189.100.204;
 deny 193.189.100.205;
 deny 193.189.100.206;
 deny 193.218.118.133;
+deny 193.218.118.161;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
+deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.233.133.109;
 deny 193.233.133.42;
@@ -689,6 +692,7 @@ deny 199.195.253.124;
 deny 199.195.253.156;
 deny 199.195.253.180;
 deny 199.195.253.247;
+deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
@@ -981,7 +985,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -1002,7 +1005,6 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1554,6 +1556,7 @@ deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3e3:519::1;
 deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:470::30;
+deny 2a0e:b107:12d:abcd:f8fe:d2ff:feb0:6d14;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
@@ -1576,6 +1579,8 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
+deny 2a0f:e586:f:f::188;
+deny 2a0f:e586:f:f:8398:111f:f05a:ac07;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1614,7 +1619,6 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
 deny 41.216.183.87;
-deny 44.194.47.213;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1731,6 +1735,7 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.211.39.35;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1887,11 +1892,6 @@ deny 94.16.116.81;
 deny 94.16.116.86;
 deny 94.16.121.226;
 deny 94.16.121.91;
-deny 94.177.106.37;
-deny 94.177.106.46;
-deny 94.177.106.54;
-deny 94.177.106.55;
-deny 94.177.106.59;
 deny 94.228.163.25;
 deny 94.228.169.70;
 deny 94.230.208.147;
