--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -256,6 +256,7 @@ allow 185.107.57.66;
 allow 185.107.70.56;
 allow 185.112.144.11;
 allow 185.112.146.167;
+allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.126.117.21;
 allow 185.129.61.1;
@@ -632,6 +633,7 @@ allow 193.218.118.161;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
+allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.233.133.42;
@@ -1575,6 +1577,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8398:111f:f05a:ac07;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1597,6 +1600,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 3.214.145.119;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.1.201.144;
@@ -1701,7 +1705,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.207.186.213;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.103.190;
@@ -1888,6 +1891,7 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
+allow 94.177.106.247;
 allow 94.177.106.37;
 allow 94.177.106.46;
 allow 94.177.106.54;
