--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -256,6 +256,7 @@ set_real_ip_from 185.107.57.66;
 set_real_ip_from 185.107.70.56;
 set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
+set_real_ip_from 185.112.146.168;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.126.117.21;
 set_real_ip_from 185.129.61.1;
@@ -632,6 +633,7 @@ set_real_ip_from 193.218.118.161;
 set_real_ip_from 193.218.118.173;
 set_real_ip_from 193.218.118.178;
 set_real_ip_from 193.218.118.182;
+set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.233.133.109;
 set_real_ip_from 193.233.133.42;
@@ -1575,6 +1577,7 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
+set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:8398:111f:f05a:ac07;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1597,6 +1600,7 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.214.145.119;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.37.81;
 set_real_ip_from 37.1.201.144;
@@ -1701,7 +1705,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.207.186.213;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.190;
@@ -1888,6 +1891,7 @@ set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
+set_real_ip_from 94.177.106.247;
 set_real_ip_from 94.177.106.37;
 set_real_ip_from 94.177.106.46;
 set_real_ip_from 94.177.106.54;
