--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -105,6 +105,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -120,7 +121,6 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -369,6 +369,7 @@ deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
+deny 2a02:c206:2095:2624::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -439,6 +440,8 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -664,6 +667,7 @@ deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3e3:519::1;
 deny 2a0e:97c0:3ea:372::1;
+deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
