--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,12 +6,12 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
-allow 103.253.24.18;
 allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
@@ -113,6 +113,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -198,7 +199,6 @@ allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.89.182;
 allow 176.97.114.202;
-allow 176.97.114.252;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -642,7 +642,6 @@ allow 193.35.18.105;
 allow 193.35.18.77;
 allow 194.15.112.133;
 allow 194.15.113.118;
-allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.164.122.21;
 allow 194.233.174.56;
@@ -798,6 +797,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -981,7 +981,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -1002,7 +1001,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1252,6 +1250,7 @@ allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
+allow 2a02:c206:2095:2624::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -1322,6 +1321,8 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1547,6 +1548,7 @@ allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3e3:519::1;
 allow 2a0e:97c0:3ea:372::1;
+allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
@@ -1592,8 +1594,10 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 3.214.22.105;
 allow 35.0.127.52;
 allow 37.114.37.81;
+allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
 allow 37.120.239.59;
@@ -1642,6 +1646,7 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
+allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1694,8 +1699,10 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.22.130.41;
 allow 5.255.100.219;
+allow 5.255.100.224;
+allow 5.255.100.26;
+allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1740,6 +1747,7 @@ allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
 allow 62.182.84.146;
+allow 64.226.89.91;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
