--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -12,6 +12,7 @@ allow 103.196.37.111;
 allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
+allow 103.253.24.18;
 allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
@@ -36,6 +37,7 @@ allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
+allow 107.173.179.59;
 allow 107.174.138.172;
 allow 107.189.10.175;
 allow 107.189.11.111;
@@ -183,6 +185,7 @@ allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
+allow 172.104.164.133;
 allow 172.104.182.84;
 allow 172.104.214.41;
 allow 172.104.243.155;
@@ -213,6 +216,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 178.30.70.216;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -282,7 +286,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -642,6 +645,7 @@ allow 193.35.18.105;
 allow 193.35.18.77;
 allow 194.15.112.133;
 allow 194.15.113.118;
+allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.164.122.21;
 allow 194.233.174.56;
@@ -949,9 +953,11 @@ allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
+allow 23.137.248.139;
 allow 23.137.248.69;
 allow 23.137.250.34;
 allow 23.137.253.108;
+allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.9;
 allow 23.152.24.77;
@@ -984,11 +990,13 @@ allow 23.155.24.6;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
+allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:d321:2195:2012::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 24.240.72.170;
 allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.35;
@@ -1007,7 +1015,9 @@ allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:759::1;
+allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
@@ -1594,7 +1604,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.214.22.105;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1676,7 +1685,6 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.195.103.135;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1726,6 +1734,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 52.71.159.63;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
@@ -1795,13 +1804,13 @@ allow 82.153.138.24;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.55.67.44;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.251;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
-allow 84.211.225.54;
 allow 84.239.46.144;
 allow 85.17.9.83;
 allow 85.215.76.62;
