--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -12,6 +12,7 @@ set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
+set_real_ip_from 103.253.24.18;
 set_real_ip_from 103.28.52.93;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
@@ -36,6 +37,7 @@ set_real_ip_from 104.244.78.233;
 set_real_ip_from 104.244.79.44;
 set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.244.79.61;
+set_real_ip_from 107.173.179.59;
 set_real_ip_from 107.174.138.172;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
@@ -183,6 +185,7 @@ set_real_ip_from 171.25.193.77;
 set_real_ip_from 171.25.193.78;
 set_real_ip_from 171.25.193.79;
 set_real_ip_from 171.25.193.80;
+set_real_ip_from 172.104.164.133;
 set_real_ip_from 172.104.182.84;
 set_real_ip_from 172.104.214.41;
 set_real_ip_from 172.104.243.155;
@@ -213,6 +216,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
+set_real_ip_from 178.30.70.216;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -282,7 +286,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -642,6 +645,7 @@ set_real_ip_from 193.35.18.105;
 set_real_ip_from 193.35.18.77;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
+set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.164.122.21;
 set_real_ip_from 194.233.174.56;
@@ -949,9 +953,11 @@ set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 23.137.248.100;
+set_real_ip_from 23.137.248.139;
 set_real_ip_from 23.137.248.69;
 set_real_ip_from 23.137.250.34;
 set_real_ip_from 23.137.253.108;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.110;
 set_real_ip_from 23.137.253.9;
 set_real_ip_from 23.152.24.77;
@@ -984,11 +990,13 @@ set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
 set_real_ip_from 23.94.211.25;
+set_real_ip_from 2400:8901::f03c:93ff:fe68:23b3;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:d321:2195:2012::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.248;
 set_real_ip_from 2.58.56.35;
@@ -1007,7 +1015,9 @@ set_real_ip_from 2602:f9f3:0:2::5;
 set_real_ip_from 2602:f9f3:0:2::8d;
 set_real_ip_from 2602:f9f3:0:2::91;
 set_real_ip_from 2602:fc24:12:759::1;
+set_real_ip_from 2602:fc24:12:77c0::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:95b7::1;
@@ -1594,7 +1604,6 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.214.22.105;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.37.81;
 set_real_ip_from 37.114.41.119;
@@ -1676,7 +1685,6 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
-set_real_ip_from 46.195.103.135;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1726,6 +1734,7 @@ set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
+set_real_ip_from 52.71.159.63;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
@@ -1795,13 +1804,13 @@ set_real_ip_from 82.153.138.24;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
+set_real_ip_from 82.55.67.44;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.251;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
-set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.215.76.62;
