--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -118,6 +119,7 @@ allow 2402:1f00:8100:400::9;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
+allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
@@ -130,6 +132,7 @@ allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -377,10 +380,12 @@ allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
+allow 2a03:4000:19:40:4804:2fff:fe4c:9cc1;
 allow 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 allow 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 allow 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 allow 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
+allow 2a03:4000:21:115:8837:15ff:fe14:64cc;
 allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
@@ -396,6 +401,7 @@ allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
 allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
+allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
@@ -486,6 +492,7 @@ allow 2a06:de01:200::23;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
+allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
