Update lists at 20240701-1200

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -288,6 +288,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -388,7 +389,6 @@ deny 185.220.101.169;
 deny 185.220.101.17;
 deny 185.220.101.170;
 deny 185.220.101.171;
-deny 185.220.101.173;
 deny 185.220.101.174;
 deny 185.220.101.175;
 deny 185.220.101.176;
@@ -991,6 +991,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -1014,6 +1015,7 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1443,7 +1445,6 @@ deny 2a0b:f4c2:1::168;
 deny 2a0b:f4c2:1::169;
 deny 2a0b:f4c2:1::170;
 deny 2a0b:f4c2:1::171;
-deny 2a0b:f4c2:1::173;
 deny 2a0b:f4c2:1::174;
 deny 2a0b:f4c2:1::175;
 deny 2a0b:f4c2:1::176;
@@ -1614,6 +1615,7 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 34.226.149.201;
 deny 35.0.127.52;
 deny 37.114.37.81;
 deny 37.114.41.119;
@@ -1630,7 +1632,6 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 38.97.116.244;
 deny 41.216.183.87;
-deny 44.217.28.226;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1922,7 +1923,6 @@ deny 94.230.208.148;
 deny 94.24.109.10;
 deny 94.24.109.20;
 deny 94.24.109.30;
-deny 94.24.109.40;
 deny 94.32.66.15;
 deny 94.75.225.81;
 deny 95.128.43.164;
