--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -288,6 +288,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -388,7 +389,6 @@ allow 185.220.101.169;
 allow 185.220.101.17;
 allow 185.220.101.170;
 allow 185.220.101.171;
-allow 185.220.101.173;
 allow 185.220.101.174;
 allow 185.220.101.175;
 allow 185.220.101.176;
@@ -991,6 +991,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -1014,6 +1015,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1443,7 +1445,6 @@ allow 2a0b:f4c2:1::168;
 allow 2a0b:f4c2:1::169;
 allow 2a0b:f4c2:1::170;
 allow 2a0b:f4c2:1::171;
-allow 2a0b:f4c2:1::173;
 allow 2a0b:f4c2:1::174;
 allow 2a0b:f4c2:1::175;
 allow 2a0b:f4c2:1::176;
@@ -1614,6 +1615,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.226.149.201;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1630,7 +1632,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 38.97.116.244;
 allow 41.216.183.87;
-allow 44.217.28.226;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1922,7 +1923,6 @@ allow 94.230.208.148;
 allow 94.24.109.10;
 allow 94.24.109.20;
 allow 94.24.109.30;
-allow 94.24.109.40;
 allow 94.32.66.15;
 allow 94.75.225.81;
 allow 95.128.43.164;
