--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -288,6 +288,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -388,7 +389,6 @@ set_real_ip_from 185.220.101.169;
 set_real_ip_from 185.220.101.17;
 set_real_ip_from 185.220.101.170;
 set_real_ip_from 185.220.101.171;
-set_real_ip_from 185.220.101.173;
 set_real_ip_from 185.220.101.174;
 set_real_ip_from 185.220.101.175;
 set_real_ip_from 185.220.101.176;
@@ -991,6 +991,7 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
 set_real_ip_from 23.94.211.25;
@@ -1014,6 +1015,7 @@ set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::5;
@@ -1443,7 +1445,6 @@ set_real_ip_from 2a0b:f4c2:1::168;
 set_real_ip_from 2a0b:f4c2:1::169;
 set_real_ip_from 2a0b:f4c2:1::170;
 set_real_ip_from 2a0b:f4c2:1::171;
-set_real_ip_from 2a0b:f4c2:1::173;
 set_real_ip_from 2a0b:f4c2:1::174;
 set_real_ip_from 2a0b:f4c2:1::175;
 set_real_ip_from 2a0b:f4c2:1::176;
@@ -1614,6 +1615,7 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.226.149.201;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.37.81;
 set_real_ip_from 37.114.41.119;
@@ -1630,7 +1632,6 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 41.216.183.87;
-set_real_ip_from 44.217.28.226;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1922,7 +1923,6 @@ set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.24.109.10;
 set_real_ip_from 94.24.109.20;
 set_real_ip_from 94.24.109.30;
-set_real_ip_from 94.24.109.40;
 set_real_ip_from 94.32.66.15;
 set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
