--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -124,6 +124,7 @@ set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::5;
@@ -552,7 +553,6 @@ set_real_ip_from 2a0b:f4c2:1::168;
 set_real_ip_from 2a0b:f4c2:1::169;
 set_real_ip_from 2a0b:f4c2:1::170;
 set_real_ip_from 2a0b:f4c2:1::171;
-set_real_ip_from 2a0b:f4c2:1::173;
 set_real_ip_from 2a0b:f4c2:1::174;
 set_real_ip_from 2a0b:f4c2:1::175;
 set_real_ip_from 2a0b:f4c2:1::176;
