Update lists at 20240701-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -157,7 +157,6 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -204,6 +203,7 @@ allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.89.182;
 allow 176.97.114.202;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -288,7 +288,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -695,7 +694,6 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -982,7 +980,13 @@ allow 23.154.177.22;
 allow 23.154.177.23;
 allow 23.154.177.24;
 allow 23.154.177.25;
+allow 23.154.177.26;
+allow 23.154.177.27;
+allow 23.154.177.28;
+allow 23.154.177.29;
 allow 23.154.177.3;
+allow 23.154.177.30;
+allow 23.154.177.31;
 allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
@@ -992,6 +996,7 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
+allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -1001,7 +1006,6 @@ allow 2400:d321:2195:2012::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 24.240.72.170;
 allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.35;
@@ -1018,6 +1022,7 @@ allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
+allow 2602:f9f3:0:2::3d;
 allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
@@ -1252,6 +1257,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1615,7 +1621,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.226.149.201;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1630,8 +1635,10 @@ allow 37.228.129.63;
 allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
+allow 37.48.70.156;
 allow 38.97.116.244;
 allow 41.216.183.87;
+allow 44.213.140.163;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1734,6 +1741,7 @@ allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.244;
+allow 5.255.120.117;
 allow 5.255.123.164;
 allow 5.255.124.150;
 allow 5.255.125.196;
@@ -1816,7 +1824,6 @@ allow 82.153.138.208;
 allow 82.153.138.24;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 82.55.67.44;
 allow 83.217.9.73;
 allow 83.96.213.63;
@@ -1931,7 +1938,6 @@ allow 95.143.193.125;
 allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.211.244.28;
-allow 95.216.229.230;
 allow 96.126.98.146;
 allow 96.27.198.133;
 allow 96.66.15.152;
