Update lists at 20240701-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -121,7 +122,6 @@ allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
-allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 135.125.205.25;
@@ -157,7 +157,6 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -240,7 +239,6 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.213.249.20;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -263,7 +261,6 @@ allow 185.107.57.66;
 allow 185.107.70.56;
 allow 185.112.144.11;
 allow 185.112.146.167;
-allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.126.117.21;
 allow 185.129.61.1;
@@ -698,7 +695,6 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -724,7 +720,6 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
-allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -1363,6 +1358,7 @@ allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
+allow 2a04:9dc0:31::c0cc:73;
 allow 2a04:9dc0:31::c0cc:fb;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1643,6 +1639,10 @@ allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 38.152.53.242;
+allow 38.152.53.243;
+allow 38.152.53.244;
+allow 38.152.53.245;
 allow 38.97.116.244;
 allow 41.216.183.87;
 allow 45.11.59.28;
@@ -1736,13 +1736,13 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.108.48;
 allow 5.255.111.64;
+allow 5.255.113.143;
 allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
@@ -1777,6 +1777,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.80.26.139;
 allow 5.61.51.143;
 allow 5.79.66.19;
 allow 62.133.45.2;
@@ -1786,7 +1787,6 @@ allow 62.182.84.146;
 allow 64.226.89.91;
 allow 64.227.115.78;
 allow 66.146.193.33;
-allow 66.220.242.222;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
@@ -1830,8 +1830,10 @@ allow 82.153.138.208;
 allow 82.153.138.24;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.115;
 allow 83.97.20.251;
 allow 83.97.20.77;
 allow 84.16.224.227;
@@ -1890,7 +1892,6 @@ allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.133.238.108;
-allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.123.12.112;
@@ -1925,6 +1926,7 @@ allow 94.16.121.91;
 allow 94.177.106.247;
 allow 94.177.106.37;
 allow 94.177.106.46;
+allow 94.177.106.54;
 allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
