Update lists at 20240702-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -202,6 +202,7 @@ allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
+allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.202;
 allow 178.17.170.184;
@@ -219,7 +220,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.30.70.216;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -1267,6 +1267,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1625,6 +1626,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
+allow 35.170.180.181;
 allow 37.114.37.81;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1777,7 +1779,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.80.26.139;
 allow 5.61.51.143;
 allow 5.79.66.19;
 allow 62.133.45.2;
@@ -1813,6 +1814,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
+allow 79.102.238.11;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1830,7 +1832,6 @@ allow 82.153.138.208;
 allow 82.153.138.24;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
@@ -1927,6 +1928,7 @@ allow 94.177.106.247;
 allow 94.177.106.37;
 allow 94.177.106.46;
 allow 94.177.106.54;
+allow 94.177.106.55;
 allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
