--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -202,6 +202,7 @@ set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.17.170.184;
@@ -219,7 +220,6 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 178.30.70.216;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -1267,6 +1267,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -1625,6 +1626,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
 set_real_ip_from 35.0.127.52;
+set_real_ip_from 35.170.180.181;
 set_real_ip_from 37.114.37.81;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1777,7 +1779,6 @@ set_real_ip_from 54.36.209.254;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
-set_real_ip_from 54.80.26.139;
 set_real_ip_from 5.61.51.143;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
@@ -1813,6 +1814,7 @@ set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
+set_real_ip_from 79.102.238.11;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
@@ -1830,7 +1832,6 @@ set_real_ip_from 82.153.138.208;
 set_real_ip_from 82.153.138.24;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
-set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.115;
@@ -1927,6 +1928,7 @@ set_real_ip_from 94.177.106.247;
 set_real_ip_from 94.177.106.37;
 set_real_ip_from 94.177.106.46;
 set_real_ip_from 94.177.106.54;
+set_real_ip_from 94.177.106.55;
 set_real_ip_from 94.177.106.59;
 set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.228.169.70;
