Update lists at 20240703-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -130,6 +131,7 @@ allow 139.180.187.117;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.95.59.93;
+allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.44.133.81;
 allow 142.44.234.69;
@@ -145,7 +147,6 @@ allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.146.26;
 allow 146.70.164.210;
-allow 147.45.116.145;
 allow 147.45.49.17;
 allow 147.45.78.34;
 allow 149.202.79.101;
@@ -155,6 +156,7 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -286,6 +288,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -694,6 +697,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -897,6 +901,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -907,6 +912,7 @@ allow 2400:d321:2195:2012::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 24.240.72.170;
 allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.35;
@@ -920,6 +926,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1075,6 +1082,7 @@ allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
+allow 2a02:842b:821a:1801::4;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c206:2095:2624::1;
@@ -1162,6 +1170,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
+allow 2a04:9dc0:31::c0cc:78;
 allow 2a04:9dc0:31::c0cc:fb;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1448,6 +1457,9 @@ allow 38.152.53.242;
 allow 38.152.53.243;
 allow 38.152.53.244;
 allow 38.152.53.245;
+allow 38.152.53.246;
+allow 38.152.53.250;
+allow 38.152.53.251;
 allow 38.97.116.244;
 allow 41.216.183.87;
 allow 45.11.59.28;
@@ -1569,8 +1581,8 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
-allow 52.7.177.25;
 allow 5.2.72.110;
+allow 52.73.25.123;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
@@ -1585,7 +1597,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 5.61.51.143;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1598,11 +1609,11 @@ allow 66.220.242.222;
 allow 66.78.40.102;
 allow 67.219.109.141;
 allow 71.19.144.106;
-allow 71.19.144.222;
 allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.253.202.121;
 allow 74.82.47.194;
+allow 77.105.133.7;
 allow 77.105.146.42;
 allow 77.220.196.253;
 allow 77.221.157.237;
@@ -1643,6 +1654,7 @@ allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
+allow 83.97.20.120;
 allow 83.97.20.251;
 allow 83.97.20.77;
 allow 84.16.224.227;
@@ -1706,6 +1718,7 @@ allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.123.12.112;
+allow 93.8.245.134;
 allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
@@ -1749,7 +1762,6 @@ allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
-allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.211.244.28;
 allow 96.126.98.146;
