Update lists at 20240704-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -145,6 +145,7 @@ allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.146.26;
 allow 146.70.164.210;
+allow 147.45.116.145;
 allow 147.45.49.17;
 allow 147.45.78.34;
 allow 149.202.79.101;
@@ -155,7 +156,6 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 154.26.159.157;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -203,7 +203,6 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.202;
-allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -696,7 +695,6 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -710,6 +708,7 @@ allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::9dce;
+allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
 allow 2001:41d0:700:10a2::;
@@ -1058,7 +1057,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1427,7 +1425,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.226.69.247;
+allow 3.230.245.201;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1639,13 +1637,13 @@ allow 82.153.138.24;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.49.247.109;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
 allow 83.97.20.251;
 allow 83.97.20.77;
 allow 84.16.224.227;
-allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 85.17.9.83;
