--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -6,7 +6,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -159,6 +158,7 @@ deny 151.80.148.159;
 deny 152.89.233.169;
 deny 154.16.116.61;
 deny 154.26.159.157;
+deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.247.72.192;
@@ -229,7 +229,6 @@ deny 179.43.159.199;
 deny 179.43.159.200;
 deny 179.43.159.201;
 deny 179.43.159.78;
-deny 179.43.161.170;
 deny 179.43.161.171;
 deny 179.43.161.172;
 deny 179.43.161.173;
@@ -700,6 +699,7 @@ deny 199.195.253.124;
 deny 199.195.253.156;
 deny 199.195.253.180;
 deny 199.195.253.247;
+deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
@@ -921,7 +921,6 @@ deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.90;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
@@ -1382,6 +1381,7 @@ deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3e3:519::1;
 deny 2a0e:97c0:3ea:372::1;
+deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
@@ -1432,6 +1432,7 @@ deny 31.133.0.210;
 deny 31.42.185.134;
 deny 35.0.127.52;
 deny 37.114.37.81;
+deny 37.114.41.119;
 deny 37.1.201.144;
 deny 37.120.190.85;
 deny 37.120.239.59;
@@ -1581,7 +1582,7 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.157.86.147;
+deny 54.152.12.70;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1607,7 +1608,6 @@ deny 66.78.40.182;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
-deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.253.202.121;
 deny 74.82.47.194;
